Turn on Promo Code box for all customers. Also includes fix for layout issue in mobile Safari which breaks when clearfixed grids occur after inline elements.

--- a/assets/stylesheets/objects/_grid.scss
+++ b/assets/stylesheets/objects/_grid.scss
@@ -25,14 +25,17 @@ $gutter-width-fluid: 2%;
 }
 
 .grid--flex {
-    &:before {
-        display: block;
-    }
     display: flex;
     flex-wrap: wrap;
 
     .grid__item {
         max-width: 100%;
+    }
+}
+
+.grid--no-clearfix-before {
+    &:before {
+        display: block;
     }
 }
 
